versioned_docs/version-7.0/client-api/operations/maintenance/etl/add-etl.mdx
---
title: "Add ETL Operation"
sidebar_label: Add ETL
sidebar_position: 0
hide_table_of_contents: true
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Add ETL Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use the `AddEtlOperation` method to add a new ongoing ETL task to your database.  

* To learn about ETL (Extract, Transfer, Load) ongoing tasks, see the [ETL Basics](../../../../server/ongoing-tasks/etl/basics.mdx) article.  
  To learn how to manage ETL tasks from Studio, see [Ongoing tasks - overview](../../../../studio/database/tasks/ongoing-tasks/general-info.mdx).  

* In this page:

  * [Add RavenDB ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-ravendb-etl-task)  
  * [Add SQL ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-sql-etl-task)  
  * [Add Snowflake ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-snowflake-etl-task)  
  * [Add OLAP ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-olap-etl-task)  
  * [Add Elasticsearch ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-elasticsearch-etl-task)  
  * [Add Kafka ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-kafka-etl-task)  
  * [Add RabbitMQ ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-rabbitmq-etl-task)  
  * [Add Azure Queue Storage ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-azure-queue-storage-etl-task)
  * [Add Amazon SQS ETL task](../../../../client-api/operations/maintenance/etl/add-etl.mdx#add-amazon-sqs-etl-task)
  * [Syntax](../../../../client-api/operations/maintenance/etl/add-etl.mdx#syntax)

</Admonition>
## Add RavenDB ETL task

* Learn about the RavenDB ETL task in the **[RavenDB ETL task](../../../../server/ongoing-tasks/etl/raven.mdx)** article.  
* Learn how to define a connection string for the RavenDB ETL task here: **[Add a RavenDB connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#add-a-ravendb-connection-string)**  
* To manage the RavenDB ETL task from Studio, see **[Studio: RavenDB ETL task](../../../../studio/database/tasks/ongoing-tasks/ravendb-etl-task.mdx)**.  
The following example adds a RavenDB ETL task:

<TabItem value="add_raven_etl" label="add_raven_etl">
<CodeBlock language="csharp">
{`// Define the RavenDB ETL task configuration object
// ================================================
var ravenEtlConfig = new RavenEtlConfiguration
\{
    Name = "task-name",
    ConnectionStringName = "raven-connection-string-name",
    Transforms =
    \{
        new Transformation
        \{
            // The script name
            Name = "script-name",
            
            // RavenDB collections the script uses
            Collections = \{ "Employees" \},
            
            // The transformation script
            Script = @"loadToEmployees (\{
                       Name: this.FirstName + ' ' + this.LastName,
                       Title: this.Title
                     \});"
        \}
    \},

    // Do not prevent task failover to another node (optional) 
    PinToMentorNode = false
\};

// Define the AddEtlOperation
// ==========================
var operation = new AddEtlOperation<RavenConnectionString>(ravenEtlConfig);

// Execute the operation by passing it to Maintenance.Send
// =======================================================
AddEtlOperationResult result = store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>



## Add SQL ETL task

* Learn about the SQL ETL task in the **[SQL ETL task](../../../../server/ongoing-tasks/etl/sql.mdx)** article.  
* Learn how to define a connection string for the SQL ETL task here: **[Add an SQL connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#add-an-sql-connection-string)**  
The following example adds an SQL ETL task:

<TabItem value="add_sql_etl" label="add_sql_etl">
<CodeBlock language="csharp">
{`// Define the SQL ETL task configuration object
// ============================================
var sqlEtlConfig = new SqlEtlConfiguration
\{
    Name = "task-name",
    ConnectionStringName = "sql-connection-string-name",
    SqlTables =
    \{
        new SqlEtlTable \{TableName = "Orders", DocumentIdColumn = "Id", InsertOnlyMode = false\},
        new SqlEtlTable \{TableName = "OrderLines", DocumentIdColumn = "OrderId", InsertOnlyMode = false\},
    \},
    Transforms =
    \{
        new Transformation
        \{
            Name = "script-name",
            Collections = \{ "Orders" \},
            Script = @"var orderData = \{
                                Id: id(this),
                                OrderLinesCount: this.Lines.length,
                                TotalCost: 0
                            \};

                            for (var i = 0; i < this.Lines.length; i++) \{
                                var line = this.Lines[i];
                                orderData.TotalCost += line.PricePerUnit;
                                
                                // Load to SQL table 'OrderLines'
                                loadToOrderLines(\{
                                    OrderId: id(this),
                                    Qty: line.Quantity,
                                    Product: line.Product,
                                    Cost: line.PricePerUnit
                                \});
                            \}
                            orderData.TotalCost = Math.round(orderData.TotalCost  * 100) / 100;

                            // Load to SQL table 'Orders'
                            loadToOrders(orderData)"
        \}
    \},

    // Do not prevent task failover to another node (optional) 
    PinToMentorNode = false
\};

// Define the AddEtlOperation
// ===========================
var operation = new AddEtlOperation<SqlConnectionString>(sqlEtlConfig);

// Execute the operation by passing it to Maintenance.Send
// =======================================================
AddEtlOperationResult result = store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>



## Add Snowflake ETL task

* Learn about the Snowflake ETL task in the **[Snowflake ETL task](../../../../server/ongoing-tasks/etl/snowflake.mdx)** article.  
* Learn how to define a connection string for the Snowflake ETL task here: **[Add a Snowflake connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#add-a-snowflake-connection-string)**  
The following example adds a Snowflake ETL task:

<TabItem value="add_snowflake_etl" label="add_snowflake_etl">
<CodeBlock language="csharp">
{`// Define the Snowflake ETL task configuration object
// ============================================
var snowflakeEtlConfig = new SnowflakeEtlConfiguration
\{
    Name = "task-name",
    ConnectionStringName = "snowflake-connection-string-name",
    SnowflakeTables =
    \{
        new SnowflakeEtlTable \{TableName = "Orders", DocumentIdColumn = "Id", InsertOnlyMode = false\},
        new SnowflakeEtlTable \{TableName = "OrderLines", DocumentIdColumn = "OrderId", InsertOnlyMode = false\},
    \},
    Transforms =
    \{
        new Transformation
        \{
            Name = "script-name",
            Collections = \{ "Orders" \},
            Script = @"var orderData = \{
                                Id: id(this),
                                OrderLinesCount: this.Lines.length,
                                TotalCost: 0
                            \};

                            for (var i = 0; i < this.Lines.length; i++) \{
                                var line = this.Lines[i];
                                orderData.TotalCost += line.PricePerUnit;
                                
                                // Load to SQL table 'OrderLines'
                                loadToOrderLines(\{
                                    OrderId: id(this),
                                    Qty: line.Quantity,
                                    Product: line.Product,
                                    Cost: line.PricePerUnit
                                \});
                            \}
                            orderData.TotalCost = Math.round(orderData.TotalCost  * 100) / 100;

                            // Load to SQL table 'Orders'
                            loadToOrders(orderData)"
        \}
    \},

    // Do not prevent task failover to another node (optional) 
    PinToMentorNode = false
\};

// Define the AddEtlOperation
// ===========================
var operation = new AddEtlOperation<SnowflakeConnectionString>(snowflakeEtlConfig);

// Execute the operation by passing it to Maintenance.Send
// =======================================================
AddEtlOperationResult result = store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>



## Add OLAP ETL task

* Learn about the OLAP ETL task in the **[OLAP ETL task](../../../../server/ongoing-tasks/etl/olap.mdx)** article.  
* Learn how to define a connection string for the OLAP ETL task here: **[Add an OLAP connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#add-an-olap-connection-string)**  
* To manage the OLAP ETL task from Studio, see **[Studio: OLAP ETL task](../../../../studio/database/tasks/ongoing-tasks/olap-etl-task.mdx)**.  
The following example adds an OLAP ETL task:

<TabItem value="add_olap_etl" label="add_olap_etl">
<CodeBlock language="csharp">
{`// Define the OLAP ETL task configuration object
// =============================================
var olapEtlConfig = new OlapEtlConfiguration
\{
    Name = "task-name",
    ConnectionStringName = "olap-connection-string-name",
    Transforms =
    \{
        new Transformation
        \{
            Name = "script-name",
            Collections = \{"Orders"\},
            Script = @"var orderDate = new Date(this.OrderedAt);
                           var year = orderDate.getFullYear();
                           var month = orderDate.getMonth();
                           var key = new Date(year, month);
                           loadToOrders(key, \{
                               Company : this.Company,
                               ShipVia : this.ShipVia
                           \})"
        \}
    \}
\};

// Define the AddEtlOperation
// ==========================
var operation = new AddEtlOperation<OlapConnectionString>(olapEtlConfig);

// Execute the operation by passing it to Maintenance.Send
// =======================================================
AddEtlOperationResult result = store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>



## Add Elasticsearch ETL task

* Learn about the Elasticsearch ETL task in the **[Elasticsearch ETL task](../../../../server/ongoing-tasks/etl/elasticsearch.mdx)** article.  
* Learn how to define a connection string for the Elasticsearch ETL task here: **[Add an Elasticsearch connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string.mdx#add-an-elasticsearch-connection-string)**  
* To manage the Elasticsearch ETL task from Studio, see **[Studio: Elasticsearch ETL task](../../../../studio/database/tasks/ongoing-tasks/elasticsearch-etl-task.mdx)**.  
The following example adds an Elasticsearch ETL task:

<TabItem value="add_elasticsearch_etl" label="add_elasticsearch_etl">
<CodeBlock language="csharp">
{`// Define the Elasticsearch ETL task configuration object
// ======================================================
var elasticsearchEtlConfig = new ElasticSearchEtlConfiguration
\{
    Name = "task-name",
    ConnectionStringName = "elasticsearch-connection-string-name",
    ElasticIndexes =
    \{
        // Define Elasticsearch Indexes
        new ElasticSearchIndex
        \{
            // Elasticsearch Index name
            IndexName = "orders",
            // The Elasticsearch document property that will contain the source RavenDB document id.
            // Make sure this property is also defined inside the transform script.
            DocumentIdProperty = "DocId",
            InsertOnlyMode = false
        \},
        new ElasticSearchIndex
        \{
            IndexName = "lines",
            DocumentIdProperty = "OrderLinesCount",
            // If true, don't send _delete_by_query before appending docs
            InsertOnlyMode = true
        \}
    \},
    Transforms =
    \{
        new Transformation()
        \{
            Collections = \{ "Orders" \},
            Script = @"var orderData = \{
                       DocId: id(this),
                       OrderLinesCount: this.Lines.length,
                       TotalCost: 0
                       \};

                       // Write the \`orderData\` as a document to the Elasticsearch 'orders' index
                       loadToOrders(orderData);",

            Name = "script-name"
        \}
    \}
\};

// Define the AddEtlOperation
// ==========================
var operation = new AddEtlOperation<ElasticSearchConnectionString>(elasticsearchEtlConfig);

// Execute the operation by passing it to Maintenance.Send
// =======================================================
store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>



## Add Kafka ETL task

* Learn about the Kafka ETL task in the **[Kafka ETL task](../../../../server/ongoing-tasks/etl/queue-etl/kafka.mdx)** article.  
* Learn how to define a connection string for the Kafka ETL task here: **[Add a Kafka connection string](../../../../server/ongoing-tasks/etl/queue-etl/kafka.mdx#add-a-kafka-connection-string)**  
* To manage the Kafka ETL task from Studio, see **[Studio: Kafka ETL task](../../../../studio/database/tasks/ongoing-tasks/kafka-etl-task.mdx)**.  
* Examples showing how to add a Kafka ETL task are available in the **[Add a Kafka ETL task](../../../../server/ongoing-tasks/etl/queue-etl/kafka.mdx#add-a-kafka-etl-task)** section.  



## Add RabbitMQ ETL task

* Learn about the RabbitMQ ETL task in the **[RabbitMQ ETL task](../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq.mdx)** article.  
* Learn how to define a connection string for the RabbitMQ ETL task here: **[Add a RabbitMQ connection string](../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq.mdx#add-a-rabbitmq-connection-string)**  
* To manage the RabbitMQ ETL task from Studio, see **[Studio: RabbitMQ ETL task](../../../../studio/database/tasks/ongoing-tasks/rabbitmq-etl-task.mdx)**.  
* Examples showing how to add a RabbitMQ ETL task are available in the **[Add a RabbitMQ ETL task](../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq.mdx#add-a-rabbitmq-etl-task)** section.  



## Add Azure Queue Storage ETL task

* Learn about the Azure Queue Storage ETL task in the **[Azure Queue Storage ETL task](../../../../server/ongoing-tasks/etl/queue-etl/azure-queue.mdx)** article.  
* Learn how to define a connection string for the Azure Queue Storage ETL task here: 
  **[Add an Azure Queue Storage connection string](../../../../server/ongoing-tasks/etl/queue-etl/azure-queue.mdx#add-an-azure-queue-storage-connection-string)**  
* To manage the Azure Queue Storage ETL task from Studio, see **[Studio: Azure Queue Storage ETL task](../../../../studio/database/tasks/ongoing-tasks/azure-queue-storage-etl.mdx)**.  
* Examples showing how to add an Azure Queue Storage ETL task are available in the **[Add a Azure Queue Storage ETL task](../../../../server/ongoing-tasks/etl/queue-etl/azure-queue.mdx#add-an-azure-queue-storage-etl-task)** section.  



## Add Amazon SQS ETL task

* Learn about the AWS SQS ETL task in the **[Amazon SQS ETL task](../../../../server/ongoing-tasks/etl/queue-etl/amazon-sqs.mdx)** article.  
   * [This section](../../../../server/ongoing-tasks/etl/queue-etl/amazon-sqs.mdx#add-an-amazon-sqs-connection-string) 
     shows how to define a connection string to the SQS destination.  
   * [This section](../../../../server/ongoing-tasks/etl/queue-etl/amazon-sqs.mdx#add-an-amazon-sqs-etl-task) 
     shows how to run an ETL task that uses the defined connection string.  
* To learn how to manage the task from Studio, see **[Studio: Amazon SQS ETL Task](../../../../studio/database/tasks/ongoing-tasks/amazon-sqs-etl.mdx)**.  



## Syntax

<TabItem value="add_etl_operation" label="add_etl_operation">
<CodeBlock language="csharp">
{`public AddEtlOperation(EtlConfiguration<T> configuration)
`}
</CodeBlock>
</TabItem>

| Parameter         | Type                  | Description                                                          |
|-------------------|-----------------------|----------------------------------------------------------------------|
| **configuration** | `EtlConfiguration<T>` | The ETL configuration object where `T` is the connection string type |




</LanguageContent>
<LanguageContent language="java">

<Admonition type="note" title="Note">

* Use the `AddEtlOperation` method to add a new ongoing ETL task to your database.

* To learn about ETL (Extract, Transfer, Load) ongoing tasks, see article [ETL Basics](../../../../server/ongoing-tasks/etl/basics.mdx).  
  To learn how to manage ETL tasks from the Studio, see [Ongoing tasks - overview](../../../../studio/database/tasks/ongoing-tasks/general-info.mdx).

* In this page:
  * [Example - add Raven ETL](../../../../client-api/operations/maintenance/etl/add-etl.mdx#example---add-raven-etl)
  * [Example - add SQL ETL](../../../../client-api/operations/maintenance/etl/add-etl.mdx#example---add-sql-etl)
  * [Example - add OLAP ETL](../../../../client-api/operations/maintenance/etl/add-etl.mdx#example---add-olap-etl)
  * [Syntax](../../../../client-api/operations/maintenance/etl/add-etl.mdx#syntax)

</Admonition>
## Example - add Raven ETL

<TabItem value="add_raven_etl" label="add_raven_etl">
<CodeBlock language="java">
{`RavenEtlConfiguration configuration = new RavenEtlConfiguration();
configuration.setName("Employees ETL");
Transformation transformation = new Transformation();
transformation.setName("Script #1");
transformation.setScript("loadToEmployees (\{\\n" +
    "  Name: this.FirstName + ' ' + this.LastName,\\n" +
    "  Title: this.Title\\n" +
    "\});");

configuration.setTransforms(Arrays.asList(transformation));
AddEtlOperation<RavenConnectionString> operation = new AddEtlOperation<>(configuration);
AddEtlOperationResult result = store.maintenance().send(operation);
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Note">

**Secure servers**:

To [connect secure RavenDB servers](../../../../server/security/authentication/certificate-management.mdx#enabling-communication-between-servers:-importing-and-exporting-certificates)
you need to

1. Export the server certificate from the source server.
2. Install it as a client certificate on the destination server.

This can be done in the RavenDB Studio -&gt; Server Management -&gt; [Certificates view](../../../../server/security/authentication/certificate-management.mdx#studio-certificates-management-view).
</Admonition>



## Example - add SQL ETL

<TabItem value="add_sql_etl" label="add_sql_etl">
<CodeBlock language="java">
{`SqlEtlConfiguration configuration = new SqlEtlConfiguration();
SqlEtlTable table1 = new SqlEtlTable();
table1.setTableName("Orders");
table1.setDocumentIdColumn("Id");
table1.setInsertOnlyMode(false);

SqlEtlTable table2 = new SqlEtlTable();
table2.setTableName("OrderLines");
table2.setDocumentIdColumn("OrderId");
table2.setInsertOnlyMode(false);

configuration.setSqlTables(Arrays.asList(table1, table2));
configuration.setName("Order to SQL");
configuration.setConnectionStringName("sql-connection-string-name");

Transformation transformation = new Transformation();
transformation.setName("Script #1");
transformation.setCollections(Arrays.asList("Orders"));
transformation.setScript("var orderData = \{\\n" +
    "    Id: id(this),\\n" +
    "    OrderLinesCount: this.Lines.length,\\n" +
    "    TotalCost: 0\\n" +
    "\};\\n" +
    "\\n" +
    "    for (var i = 0; i < this.Lines.length; i++) \{\\n" +
    "        var line = this.Lines[i];\\n" +
    "        orderData.TotalCost += line.PricePerUnit;\\n" +
    "\\n" +
    "        // Load to SQL table 'OrderLines'\\n" +
    "        loadToOrderLines(\{\\n" +
    "            OrderId: id(this),\\n" +
    "            Qty: line.Quantity,\\n" +
    "            Product: line.Product,\\n" +
    "            Cost: line.PricePerUnit\\n" +
    "        \});\\n" +
    "    \}\\n" +
    "    orderData.TotalCost = Math.round(orderData.TotalCost  * 100) / 100;\\n" +
    "\\n" +
    "    // Load to SQL table 'Orders'\\n" +
    "    loadToOrders(orderData)");

configuration.setTransforms(Arrays.asList(transformation));

AddEtlOperation<SqlConnectionString> operation = new AddEtlOperation<>(configuration);

AddEtlOperationResult result = store.maintenance().send(operation);
`}
</CodeBlock>
</TabItem>



## Example - add OLAP ETL

<TabItem value="add_olap_etl" label="add_olap_etl">
<CodeBlock language="java">
{`OlapEtlConfiguration configuration = new OlapEtlConfiguration();

configuration.setName("Orders ETL");
configuration.setConnectionStringName("olap-connection-string-name");

Transformation transformation = new Transformation();
transformation.setName("Script #1");
transformation.setCollections(Arrays.asList("Orders"));
transformation.setScript("var orderDate = new Date(this.OrderedAt);\\n"+
    "var year = orderDate.getFullYear();\\n"+
    "var month = orderDate.getMonth();\\n"+
    "var key = new Date(year, month);\\n"+
    "loadToOrders(key, \{\\n"+
    "    Company : this.Company,\\n"+
    "    ShipVia : this.ShipVia\\n"+
    "\})"
);

configuration.setTransforms(Arrays.asList(transformation));

AddEtlOperation<OlapConnectionString> operation = new AddEtlOperation<OlapConnectionString>(configuration);

AddEtlOperationResult result = store.maintenance().send(operation);
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="add_etl_operation" label="add_etl_operation">
<CodeBlock language="java">
{`public AddEtlOperation(EtlConfiguration<T> configuration);
`}
</CodeBlock>
</TabItem>

| Parameter         | Type                  | Description                                           |
|-------------------|-----------------------|-------------------------------------------------------|
| **configuration** | `EtlConfiguration<T>` | ETL configuration where `T` is connection string type |




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Use the `AddEtlOperation` method to add a new ongoing ETL task to your database.

* To learn about ETL (Extract, Transfer, Load) ongoing tasks, see article [ETL Basics](../../../../server/ongoing-tasks/etl/basics.mdx).  
  To learn how to manage ETL tasks from the Studio, see [Ongoing tasks - overview](../../../../studio/database/tasks/ongoing-tasks/general-info.mdx).

* In this page:
    * [Example - add Raven ETL](../../../../client-api/operations/maintenance/etl/add-etl.mdx#example---add-raven-etl)
    * [Example - add SQL ETL](../../../../client-api/operations/maintenance/etl/add-etl.mdx#example---add-sql-etl)
    * [Example - add OLAP ETL](../../../../client-api/operations/maintenance/etl/add-etl.mdx#example---add-olap-etl)
    * [Syntax](../../../../client-api/operations/maintenance/etl/add-etl.mdx#syntax)

</Admonition>
## Example - add Raven ETL

<TabItem value="add_raven_etl" label="add_raven_etl">
<CodeBlock language="js">
{`const etlConfigurationRvn = Object.assign(new RavenEtlConfiguration(), \{
    connectionStringName: "raven-connection-string-name",
    disabled: false,
    name: "etlRvn"
\});

const transformationRvn = \{
    applyToAllDocuments: true,
    name: "Script #1"
\};

etlConfigurationRvn.transforms = [transformationRvn];

const operationRvn = new AddEtlOperation(etlConfigurationRvn);
const etlResultRvn = await store.maintenance.send(operationRvn);
`}
</CodeBlock>
</TabItem>



## Example - add SQL ETL

<TabItem value="add_sql_etl" label="add_sql_etl">
<CodeBlock language="js">
{`const transformation = \{
    applyToAllDocuments: true,
    name: "Script #1"
\};

const table1 = \{
    documentIdColumn: "Id",
    insertOnlyMode: false,
    tableName: "Users"
\};

const etlConfigurationSql = Object.assign(new SqlEtlConfiguration(), \{
    connectionStringName: "sql-connection-string-name",
    disabled: false,
    name: "etlSql",
    transforms: [transformation],
    sqlTables: [table1]
\});

const operationSql = new AddEtlOperation(etlConfigurationSql);
const etlResult = await store.maintenance.send(operationSql);
`}
</CodeBlock>
</TabItem>



## Example - add OLAP ETL

<TabItem value="add_olap_etl" label="add_olap_etl">
<CodeBlock language="js">
{`const transformationOlap = \{
    applyToAllDocuments: true,
    name: "Script #1"
\};

const etlConfigurationOlap = Object.assign(new OlapEtlConfiguration(), \{
    connectionStringName: "olap-connection-string-name",
    disabled: false,
    name: "etlOlap",
    transforms: [transformationOlap],
\});

const operationOlap = new AddEtlOperation(etlConfigurationOlap);
const etlResultOlap = await store.maintenance.send(operationOlap);
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="add_etl_operation" label="add_etl_operation">
<CodeBlock language="js">
{`const operation = new AddEtlOperation(etlConfiguration);
`}
</CodeBlock>
</TabItem>

| Parameter         | Type                      | Description                       |
|-------------------|---------------------------|-----------------------------------|
| **configuration** | `EtlConfiguration` object | The ETL task configuration to add |

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`class EtlConfiguration \{
    taskId?;     // number
    name;        // string
    mentorNode?: // string
    connectionStringName; // string
    transforms;  // Transformation[]
    disabled?;   // boolean
    allowEtlOnNonEncryptedChannel?; // boolean 
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Server
- [ETL basics](../../../../server/ongoing-tasks/etl/basics)
- [RavenDB ETL](../../../../server/ongoing-tasks/etl/raven)
- [SQL ETL](../../../../server/ongoing-tasks/etl/sql)
- [OLAP ETL](../../../../server/ongoing-tasks/etl/olap)
- [Elasticsearch ETL](../../../../server/ongoing-tasks/etl/elasticsearch)
- [Kafka ETL](../../../../server/ongoing-tasks/etl/queue-etl/kafka)
- [RabbitMQ ETL](../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq)
- [Azure Queue Storage ETL](../../../../server/ongoing-tasks/etl/queue-etl/azure-queue)

### Studio
- [Ongoing tasks - overview](../../../../studio/database/tasks/ongoing-tasks/general-info)
- [RavenDB ETL Task](../../../../studio/database/tasks/ongoing-tasks/ravendb-etl-task)
- [OLAP ETL Task](../../../../studio/database/tasks/ongoing-tasks/olap-etl-task)
- [Elasticsearch ETL Task](../../../../studio/database/tasks/ongoing-tasks/elasticsearch-etl-task)
- [Kafka ETL Task](../../../../studio/database/tasks/ongoing-tasks/kafka-etl-task)
- [RabbitMQ ETL Task](../../../../studio/database/tasks/ongoing-tasks/rabbitmq-etl-task)
- [Azure Queue Storage ETL Task](../../../../studio/database/tasks/ongoing-tasks/azure-queue-storage-etl)

### Connection Strings
- [Add](../../../../client-api/operations/maintenance/connection-strings/add-connection-string)
- [Get](../../../../client-api/operations/maintenance/connection-strings/get-connection-string)
- [Remove](../../../../client-api/operations/maintenance/connection-strings/remove-connection-string)

### ETL
- [Basics](../../../../server/ongoing-tasks/etl/basics)
- [RavenDB ETL](../../../../server/ongoing-tasks/etl/raven)
- [SQL ETL](../../../../server/ongoing-tasks/etl/sql)


-->